test/compile_errors/err_embed_file_root_escape.w
//! expect-check-fail: outside the package root

const DATA: str = embed_file("../outside.txt")

fn main:
    let _ = DATA
